modal first code form

--- a/index.html
+++ b/index.html
@@ -383,6 +383,23 @@
             <use href="./images/symbol-defs.svg#close-btn"></use>
           </svg>
         </button>
+        <div class="container-form">
+          <b class="form-title">Оставьте свои данные, мы вам перезвоним</b>
+          <form class="modal-form">
+            <label class="form-filed">
+              <input type="text" />
+              <span class="form-label">Имя</span></label
+            >
+            <label class="form-filed">
+              <input type="tel" />
+              <span class="form-label">Телефон</span></label
+            >
+            <label class="form-filed">
+              <input type="email" />
+              <span class="form-label">Почта</span></label
+            >
+          </form>
+        </div>
       </div>
     </div>
 
