form fields with position absolute

--- a/index.html
+++ b/index.html
@@ -386,18 +386,27 @@
         <div class="container-form">
           <b class="form-title">Оставьте свои данные, мы вам перезвоним</b>
           <form class="modal-form">
-            <label class="form-filed">
-              <input type="text" />
-              <span class="form-label">Имя</span></label
-            >
-            <label class="form-filed">
-              <input type="tel" />
-              <span class="form-label">Телефон</span></label
-            >
-            <label class="form-filed">
-              <input type="email" />
-              <span class="form-label">Почта</span></label
-            >
+            <div class="form-field">
+              <label class="form-label" for="name">Имя</label>
+              <input class="input-modal" type="text" id="name" />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#person-modal"></use>
+              </svg>
+            </div>
+            <div class="form-field">
+              <label class="form-label" for="phone">Телефон</label>
+              <input class="input-modal" type="tel" id="phone" />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#phone-modal"></use>
+              </svg>
+            </div>
+            <div class="form-field">
+              <label class="form-label" for="male">Почта</label>
+              <input class="input-modal" type="text" id="male" />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#mail-modal"></use>
+              </svg>
+            </div>
           </form>
         </div>
       </div>
