--- a/index.html
+++ b/index.html
@@ -388,77 +388,60 @@
           <form class="modal-form">
             <div class="form-field">
               <label for="name" class="form-label">Имя</label>
-              <input type="text" class="form-input" id="name" />
+              <input
+                type="text"
+                minlength="2"
+                class="form-input"
+                id="name"
+                placeholder=" "
+                required
+                autofocus
+              />
               <svg class="form-icon" width="18" height="18">
                 <use href="./images/symbol-defs.svg#person-modal"></use>
               </svg>
             </div>
             <div class="form-field">
               <label for="phone" class="form-label">Телефон</label>
-              <input type="tel" class="form-input" id="phone" />
+              <input
+                type="tel"
+                pattern="\+?[0-9\s\-\(\)]+"
+                class="form-input"
+                id="phone"
+                placeholder=" "
+                required
+              />
               <svg class="form-icon" width="18" height="18">
                 <use href="./images/symbol-defs.svg#phone-modal"></use>
               </svg>
             </div>
             <div class="form-field">
               <label for="email" class="form-label">Почта</label>
-              <input type="email" class="form-input" id="email" />
+              <input type="email" class="form-input" id="email" placeholder=" " required />
               <svg class="form-icon" width="18" height="18">
                 <use href="./images/symbol-defs.svg#email-modal"></use>
               </svg>
             </div>
-            <div class="form-field">
+            <div class="form-field comment-field">
               <label for="comment" class="form-label">Комментарий</label>
               <textarea
                 type="text"
-                class="textarea"
+                class="form-input textarea"
                 id="comment"
                 placeholder="Введите текст"
               ></textarea>
             </div>
             <div class="form-field checkbox-field">
-              <input type="checkbox" class="checkbox" />
-              <span>Соглашаюсь с рассылкой и принимаю <a href="#">Условия договора</a></span>
+              <label class="label">
+                <input type="checkbox" class="checkbox" />Соглашаюсь с рассылкой и принимаю&nbsp
+                <a сlass="checkbox-link" href="#">Условия договора</a>
+                <span class="checkbox-no-cheked"></span>
+                <span class="checkbox-cheked">
+                  <svg class="checkbox-icon" width="16" height="15">
+                    <use href="./images/symbol-defs.svg#checkbox"></use></svg></span
+              ></label>
             </div>
             <button type="submit" class="form-button main-button">Отправить</button>
-            <!-- <div class="form-field">
-              <label class="form-label" for="name">Имя</label>
-              <input class="input-modal" type="text" id="name" />
-              <svg class="form-icon" width="18" height="18">
-                <use href="./images/symbol-defs.svg#person-modal"></use>
-              </svg>
-            </div>
-            <div class="form-field">
-              <label class="form-label" for="phone">Телефон</label>
-              <input class="input-modal" type="tel" id="phone" />
-              <svg class="form-icon" width="18" height="18">
-                <use href="./images/symbol-defs.svg#phone-modal"></use>
-              </svg>
-            </div>
-            <div class="form-field">
-              <label class="form-label" for="male">Почта</label>
-              <input class="input-modal" type="text" id="male" />
-              <svg class="form-icon" width="18" height="18">
-                <use href="./images/symbol-defs.svg#mail-modal"></use>
-              </svg>
-            </div>
-            <div class="form-field">
-              <label class="form-label" for="comment">Комментарий</label>
-              <textarea
-                name="comment"
-                rows="3"
-                сlass="textarea"
-                placeholder="Введите текст"
-              ></textarea>
-            </div>
-            <div class="form-field agree">
-              <input class="checkbox-input" type="checkbox" />Соглашаюсь с рассылкой и принимаю
-              <a href="#">Условия договора</a>
-                <svg class="checkbox-icon-checked" width="16" height="15">
-                  <use href="images/symbol-defs.svg#checkbox"></use>
-                </svg>
-              </span>
-            </div> -->
           </form>
         </div>
       </div>
