input checkbox requared

--- a/index.html
+++ b/index.html
@@ -433,7 +433,8 @@
             </div>
             <div class="form-field checkbox-field">
               <label class="label">
-                <input type="checkbox" class="checkbox" />Соглашаюсь с рассылкой и принимаю&nbsp
+                <input type="checkbox" class="checkbox" required />Соглашаюсь с рассылкой и
+                принимаю&nbsp
                 <a сlass="checkbox-link" href="#">Условия договора</a>
                 <span class="checkbox-no-cheked"></span>
                 <span class="checkbox-cheked">
