checkbox-link class correct

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
               <label class="label">
                 <input type="checkbox" class="checkbox" required />Соглашаюсь с рассылкой и
                 принимаю&nbsp
-                <a сlass="checkbox-link" href="#">Условия договора</a>
+                <a href="#" class="checkbox-link">Условия договора</a>
                 <span class="checkbox-no-cheked"></span>
                 <span class="checkbox-cheked">
                   <svg class="checkbox-icon" width="16" height="15">
