symbol-defs.svg replaced on icons.svg

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,14 +30,14 @@
           <li class="item">
             <a class="link" href="mailto:info@devstudio.com">
               <svg class="contact-icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#email"></use></svg
+                <use href="./images/icons.svg#email"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item">
             <a class="link" href="tel:+380961111111"
               ><svg class="contact-icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#phone"></use></svg
+                <use href="./images/icons.svg#phone"></use></svg
               >+38096 111 11 11</a
             >
           </li>
@@ -238,25 +238,25 @@
             <li class="social-net-item">
               <a class="link footer-icon" href="#"
                 ><svg class="icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#instagram"></use></svg
+                  <use href="./images/icons.svg#instagram"></use></svg
               ></a>
             </li>
             <li class="social-net-item">
               <a class="link footer-icon" href="#"
                 ><svg class="icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#twitter"></use></svg
+                  <use href="./images/icons.svg#twitter"></use></svg
               ></a>
             </li>
             <li class="social-net-item">
               <a class="link footer-icon" href="#"
                 ><svg class="icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#facebook"></use></svg
+                  <use href="./images/icons.svg#facebook"></use></svg
               ></a>
             </li>
             <li class="social-net-item">
               <a class="link footer-icon" href="#"
                 ><svg class="icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#linkedin"></use></svg
+                  <use href="./images/icons.svg#linkedin"></use></svg
               ></a>
             </li>
           </ul>
@@ -274,7 +274,7 @@
             <button class="main-button footer-button" type="submit">
               Подписаться
               <svg class="send-icon" width="24" height="24">
-                <use href="./images/symbol-defs.svg#icon-send"></use>
+                <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
           </form>
