--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
           <li class="item">
             <a class="link" href="mailto:info@devstudio.com">
               <svg class="contact-icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#email"></use></svg
+                <use href="./images/icons.svg#email"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item">
             <a class="link" href="tel:+380961111111"
               ><svg class="contact-icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#phone"></use></svg
+                <use href="./images/icons.svg#phone"></use></svg
               >+38096 111 11 11</a
             >
           </li>
@@ -61,7 +61,7 @@
             <li class="item">
               <div class="icon-wrap">
                 <svg class="icon" width="70" height="70">
-                  <use href="./images/symbol-defs.svg#antenna"></use>
+                  <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Внимание к деталям</h3>
@@ -72,7 +72,7 @@
             <li class="item">
               <div class="icon-wrap">
                 <svg class="icon" width="70" height="70">
-                  <use href="./images/symbol-defs.svg#clock"></use>
+                  <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Пунктуальность</h3>
@@ -83,7 +83,7 @@
             <li class="item">
               <div class="icon-wrap">
                 <svg class="icon" width="70" height="70">
-                  <use href="./images/symbol-defs.svg#diagram"></use>
+                  <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Планирование</h3>
@@ -94,7 +94,7 @@
             <li class="item">
               <div class="icon-wrap">
                 <svg class="icon" width="70" height="70">
-                  <use href="./images/symbol-defs.svg#astronaut"></use>
+                  <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Современные технологии</h3>
@@ -148,25 +148,25 @@
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#instagram"></use></svg
+                      <use href="./images/icons.svg#instagram"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#twitter"></use></svg
+                      <use href="./images/icons.svg#twitter"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#facebook"></use></svg
+                      <use href="./images/icons.svg#facebook"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#linkedin"></use></svg
+                      <use href="./images/icons.svg#linkedin"></use></svg
                   ></a>
                 </li>
               </ul>
@@ -179,25 +179,25 @@
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#instagram"></use></svg
+                      <use href="./images/icons.svg#instagram"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#twitter"></use></svg
+                      <use href="./images/icons.svg#twitter"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#facebook"></use></svg
+                      <use href="./images/icons.svg#facebook"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#linkedin"></use></svg
+                      <use href="./images/icons.svg#linkedin"></use></svg
                   ></a>
                 </li>
               </ul>
@@ -210,25 +210,25 @@
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#instagram"></use></svg
+                      <use href="./images/icons.svg#instagram"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#twitter"></use></svg
+                      <use href="./images/icons.svg#twitter"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#facebook"></use></svg
+                      <use href="./images/icons.svg#facebook"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#linkedin"></use></svg
+                      <use href="./images/icons.svg#linkedin"></use></svg
                   ></a>
                 </li>
               </ul>
@@ -241,25 +241,25 @@
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#instagram"></use></svg
+                      <use href="./images/icons.svg#instagram"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#twitter"></use></svg
+                      <use href="./images/icons.svg#twitter"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#facebook"></use></svg
+                      <use href="./images/icons.svg#facebook"></use></svg
                   ></a>
                 </li>
                 <li class="social-net-item">
                   <a class="link" href="#"
                     ><svg class="icon" width="20" height="20">
-                      <use href="./images/symbol-defs.svg#linkedin"></use></svg
+                      <use href="./images/icons.svg#linkedin"></use></svg
                   ></a>
                 </li>
               </ul>
@@ -274,38 +274,38 @@
             <li class="item">
               <a href="#" class="link">
                 <svg class="icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#company-one"></use>
+                  <use href="./images/icons.svg#company-one"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a href="#" class="link"
                 ><svg class="icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#company-two"></use></svg
+                  <use href="./images/icons.svg#company-two"></use></svg
               ></a>
             </li>
             <li class="item">
               <a href="#" class="link"
                 ><svg class="icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#company-three"></use></svg
+                  <use href="./images/icons.svg#company-three"></use></svg
               ></a>
             </li>
             <li class="item">
               <a href="#" class="link"
                 ><svg class="icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#company-four"></use></svg
+                  <use href="./images/icons.svg#company-four"></use></svg
               ></a>
             </li>
             <li class="item">
               <a href="#" class="link"
                 ><svg class="icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#company-five"></use></svg
+                  <use href="./images/icons.svg#company-five"></use></svg
               ></a>
             </li>
             <li class="item">
               <a href="#" class="link"
                 ><svg class="icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#company-six"></use></svg
+                  <use href="./images/icons.svg#company-six"></use></svg
               ></a>
             </li>
           </ul>
@@ -332,25 +332,25 @@
             <li class="social-net-item">
               <a class="link footer-icon" href="#"
                 ><svg class="icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#instagram"></use></svg
+                  <use href="./images/icons.svg#instagram"></use></svg
               ></a>
             </li>
             <li class="social-net-item">
               <a class="link footer-icon" href="#"
                 ><svg class="icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#twitter"></use></svg
+                  <use href="./images/icons.svg#twitter"></use></svg
               ></a>
             </li>
             <li class="social-net-item">
               <a class="link footer-icon" href="#"
                 ><svg class="icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#facebook"></use></svg
+                  <use href="./images/icons.svg#facebook"></use></svg
               ></a>
             </li>
             <li class="social-net-item">
               <a class="link footer-icon" href="#"
                 ><svg class="icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#linkedin"></use></svg
+                  <use href="./images/icons.svg#linkedin"></use></svg
               ></a>
             </li>
           </ul>
@@ -368,7 +368,7 @@
             <button class="main-button footer-button" type="submit">
               Подписаться
               <svg class="send-icon" width="24" height="24">
-                <use href="./images/symbol-defs.svg#icon-send"></use>
+                <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
           </form>
@@ -380,7 +380,7 @@
       <div class="modal">
         <button class="close-btn" type="button" data-modal-close>
           <svg class="close-btn-icon" width="18px" height="18px">
-            <use href="./images/symbol-defs.svg#close-btn"></use>
+            <use href="./images/icons.svg#close-btn"></use>
           </svg>
         </button>
         <div class="container-form">
@@ -398,7 +398,7 @@
                 autofocus
               />
               <svg class="form-icon" width="18" height="18">
-                <use href="./images/symbol-defs.svg#person-modal"></use>
+                <use href="./images/icons.svg#person-modal"></use>
               </svg>
             </div>
             <div class="form-field">
@@ -412,14 +412,14 @@
                 required
               />
               <svg class="form-icon" width="18" height="18">
-                <use href="./images/symbol-defs.svg#phone-modal"></use>
+                <use href="./images/icons.svg#phone-modal"></use>
               </svg>
             </div>
             <div class="form-field">
               <label for="email" class="form-label">Почта</label>
               <input type="email" class="form-input" id="email" placeholder=" " required />
               <svg class="form-icon" width="18" height="18">
-                <use href="./images/symbol-defs.svg#email-modal"></use>
+                <use href="./images/icons.svg#email-modal"></use>
               </svg>
             </div>
             <div class="form-field comment-field">
@@ -439,7 +439,7 @@
                 <span class="checkbox-no-cheked"></span>
                 <span class="checkbox-cheked">
                   <svg class="checkbox-icon" width="16" height="15">
-                    <use href="./images/symbol-defs.svg#checkbox"></use></svg></span
+                    <use href="./images/icons.svg#checkbox"></use></svg></span
               ></label>
             </div>
             <button type="submit" class="form-button main-button">Отправить</button>
